[metadata]
name = dbsink
version = "2.7.0"
description = Tools to sink kafka messages to a database table
author = Kyle Wilcox
author_email = kyle@axds.co
url = https://github.com/axiom-data-science/dbsink
long_description_content_type = text/markdown
long_description = file: README.md
license = MIT
license_file = LICENSE.txt
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering

[options]
zip_safe = True
install_requires =
    click
    easyavro >=3.0.0
    geoalchemy2
    msgpack-python
    psycopg2
    python-dateutil
    pytz
    shapely
    simplejson
    sqlalchemy
python_requires = >=3.7
packages = find:

[options.packages.find]
exclude = tests

[options.entry_points]
console_scripts =
    dbsink = dbsink.listen:run

dbsink.maps =
    JsonMap               = dbsink.maps:JsonMap
    StringMap             = dbsink.maps:StringMap
    GenericGeography      = dbsink.tables:GenericGeography
    GenericFloat          = dbsink.tables:GenericFloat
    AreteData             = dbsink.tables:AreteData
    NumurusData           = dbsink.tables:NumurusData
    NumurusStatus         = dbsink.tables:NumurusStatus
    NwicFloatReports      = dbsink.tables:NwicFloatReports
    GenericFieldStatistic = dbsink.tables:GenericFieldStatistic

[sdist]
formats = gztar

[check-manifest]
ignore =
    *.avsc
    .dockerignore
    release.sh
    Dockerfile
    conda-recipe
    conda-recipe/*
    tests
    tests/*

[tool:pytest]
markers =
    integration: Integeration tests against an actual database
    kafka: Integeration tests against an actual kafka broker

addopts = -m "not integration and not kafka" -s -rxs -v tests

flake8-max-line-length = 100
flake8-ignore =
    *.py E265 E501 E221 E203 E201 E124 E202 E241 E251 E741 W293 W291 W504

filterwarnings =
    ignore::DeprecationWarning
